# de_template

./: .env.aws.example  .env.azure.example  .env.example  .env.gcs.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  e2e.yml
config/: __init__.py  settings.py
dags/: de_pipeline.py
datasets/: registry.yml
datasets/_template/: bronze.sql.j2  mart.sql.j2  silver.sql.j2  source.yml.j2  staging_tests.yml.j2  stg.sql.j2  streaming.sql.j2
datasets/taxi/: dataset.yml
dbt/: profiles.yml
dbt/models/sources/: taxi_sources.yml
dbt/models/staging/: stg_taxi.sql  stg_taxi.yml
docker/: airflow.Dockerfile  dbt.Dockerfile  flink.Dockerfile  tooling.Dockerfile
docs/: 00_learning_path.md  01_stack_overview.md  02_local_quickstart.md  03_add_new_dataset.md  04_batch_to_streaming.md  05_prod_deploy_notes.md  07_observability.md
env/: README.md  aws.env  azure.env  gcs.env  local.env  local_kafka.env
flink/conf/: config.cloud.yaml.tmpl  config.minio.yaml.tmpl
flink/sql/: 00_catalog.sql.tmpl  01_source.sql.tmpl  01_source_streaming.sql.tmpl  05_bronze.sql.tmpl  05_bronze_batch.sql.tmpl  06_silver.sql.tmpl  07_bronze_streaming.sql.tmpl  07_streaming_bronze.sql.tmpl
generator/: Dockerfile  generator.py  requirements.txt
infra/: base.yml  broker.kafka.yml  broker.redpanda.yml  observability.optional.yml  observability.yml  orchestration.airflow.yml  prometheus.yml  storage.minio.yml
infra/grafana/dashboards/: flink_pipeline.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/datasources/: prometheus.yml
scripts/: count_iceberg.py  dataset_manifest.py  render_sql.py  scaffold_dataset.py  validate.py  validate.sh  validate_manifest.py  wait_for_iceberg.py
scripts/health/: __init__.py  broker.py  dbt_check.py  flink.py  iceberg.py  storage.py
tests/: conftest.py
tests/cert/: cert_report.py  make_cert_datasets.py  test_cert_datasets.py
tests/fixtures/: make_parquet.py
tests/integration/: test_allow_empty_and_scaffold.py  test_e2e_local.py
tests/unit/: test_dataset_manifest.py  test_health_iceberg.py  test_render_sql.py  test_scaffold_dataset.py  test_settings.py  test_validate_metrics.py  test_wait_for_iceberg.py
